# spoq2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TODO.md  coqast-cpp.txt  coqast-py.txt
.github/workflows/: build.yml  test.yml
IR2Json/: .gitignore
IR2Json/include/: ir2json.h
IR2Json/src/: gen_function.cpp  gen_instruction.cpp
LayerSem/: IRSem.v  LayerRefine.v
LayerSem/Asm/: AsmInsn.v  AsmSem.v
RMMSpec/: __table_is_uniform_block_spec.v  __table_maps_block_spec.v  data_create_spec.v  find_lock_granules_spec.v  find_lock_two_granules_spec.v  rtt_create_spec.v  rtt_walk_lock_unlock_spec.v  smc_data_create_spec.v  smc_data_destroy_spec.v  smc_realm_create_spec.v  smc_realm_destroy_spec.v  smc_rec_create_spec.v  smc_rec_destroy.v  smc_rtt_destroy_spec.v  smc_rtt_fold_spec.v  smc_rtt_init_ripas_spec.v  smc_rtt_set_ripas_spec.v
SpoqRules/: SpoqRules.v  _CoqProject
container/: README.md  partial_smc_rec_create.v  rmm-opt.linked.ir2json.gen.default-config.v  rmm-opt.linked.ll  rmm.linked.ll  smc_rtt_lens.v  top-bottom.json  working.v
container/coq/: datatype.pure.v  machine.pure.v
container/coq/LayerSem/: .lia.cache  .nia.cache  PrimSem.v
container/coq/pointer/: Code.v  DataTypes.v  GlobalDefs.v  _CoqProject
container/coq/revising/: .gitignore  Code.v  DataTypes.v  GlobalDefs.v  Makefile  README.md  _CoqProject
container/z3_queries/: z3_proof_checker.py
coqlib/LayerSem/: IR.v  IRSem.v  ListArrayOps.v
coqlib/LayerSem/Asm/: AsmSem.v
coqlib/LayerSem/Libs/: CommonLib.v  Notations.v
docs/: doxygen.config
examples/: .lib.c~  .lib.h~  .main.c~  lib.c  lib.h  proof.v
iasm_test/: iasm_0.c  iasm_1.c  iasm_10.c  iasm_100.c  iasm_101.c  iasm_102.c  iasm_103.c  iasm_104.c  iasm_105.c  iasm_106.c  iasm_107.c  iasm_108.c  iasm_109.c  iasm_11.c  iasm_110.c  iasm_111.c  iasm_112.c  iasm_113.c  iasm_114.c  iasm_115.c  iasm_116.c  iasm_117.c  iasm_118.c  iasm_119.c  iasm_12.c  iasm_120.c  iasm_121.c  iasm_122.c  iasm_123.c  iasm_124.c  iasm_125.c  iasm_126.c  iasm_127.c  iasm_128.c  iasm_129.c  iasm_13.c  iasm_130.c  iasm_131.c  iasm_132.c  iasm_133.c  (+300 more)
include/: SpecBaseVisitor.h  SpecLexer.h  SpecParser.h  SpecVisitor.h  SpoqIR.h  SpoqIRLoader.h  SpoqIRModule.h  analyze.h  anon_structs.h  autov.h  cmd.h  coi.h  control_flow.h  coq.h  decompose.h  gen_code.h  gen_data.h  gen_high_proof.h  gen_high_spec.h  gen_layer.h  gen_low_proof.h  gen_low_spec.h  gen_project.h  inline_asm.h  instructions.h  invariant.h  ir2spec.h  irloader.h  irtypes.h  irvalues.h  llvm.h  log.h  nodes.h  parser.h  post_process.h  profile.h  project.h  projection.h  rules.h  shortcuts.h  (+8 more)
preprocessing/: .gitignore  README.md  build-container.sh  extract-info.sh  gen-layer.py
preprocessing/extractbasics/: CMakeLists.txt  extractbasics.cpp
preprocessing/extractpointers/: extractpointers.cpp
preprocessing/my_mergefunc/: CMakeLists.txt  MyMergeFunctions.cpp
preprocessing/remove_opt_none/: CMakeLists.txt  remove_opt_none.cpp
rcsm/: rcsm_debug.v  rmm-opt.linked.ir2json.gen.default-config.json
rcsm/coq/working2/: DataTypes.v  GlobalDefs.v
scripts/AsmGen/: asmgen.py
scripts/IR2Json/src/: gen_module.cpp  gen_type.cpp
scripts/ProofCheck/: artifact.py  check.py
scripts/preprocessing/: README.md  build-passes.sh  extract-info.sh  gen-layer-llvm.py  gen-layer.py  get-ir-single-file.sh  get-ir.sh  opt.sh  rename_with_suffix.sh
scripts/preprocessing/cleaner/: CMakeLists.txt  cleaner.cpp
scripts/preprocessing/extractbasics/: extractbasics.cpp
scripts/preprocessing/extractpointers/: CMakeLists.txt  extractpointers.cpp
scripts/preprocessing/my_mergefunc/: CMakeLists.txt
scripts/preprocessing/procedure_abstraction/: CMakeLists.txt  procedureabstractionpass.cpp
scripts/preprocessing/pv_ir_outliner/: CMakeLists.txt  PVIROutliner.cpp  PVIROutliner.h
scripts/preprocessing/rename/: CMakeLists.txt  renamepass.cpp
src/: main.cpp
src/AutoV/: main.cpp
src/AutoV/GenCoq/: gen_code.cpp  gen_data.cpp  gen_high_proof.cpp  gen_high_spec.cpp  gen_layer.cpp  gen_low_proof.cpp  gen_low_spec.cpp  gen_project.cpp
src/AutoV/IRLoader/: control_flow.cpp  coq.cpp  inline_asm.cpp  instructions.cpp  irloader.cpp  irtypes.cpp  (+3 more)
src/frontend/: SpoqIRAbstraction.cpp  SpoqIRCFG.cpp  SpoqIRInlineAsm.cpp  SpoqIRLoader.cpp  SpoqIRModule.cpp  SpoqIRPostProcess.cpp  SpoqIRTranslator.cpp  ir2spec.cpp  type_inference.cpp
src/libs/: log.cpp  nodes.cpp  project.cpp  shortcuts.cpp  utils.cpp  values.cpp  visitors.cpp
src/optimizations/: coi.cpp  decompose.cpp  profile.cpp  projection.cpp  rules.cpp  simulate.cpp  symbolic.cpp  z3_pcache.hpp  z3_rules.cpp  z3_utils.cpp
test/: README.md
test/frontend-v2/: test.c  test.c.bc  test.c.ll  test.v
test/rcsm/: proof_rcsm.v  rmm-opt.linked.bc
test/rmm/: ExceptionOpsLow.v  S2TTInitLow.v  SMCHandlerLow.v  proof_debug_of.v  st_pmu_state.v  st_rmi_rec_params.v  st_rmi_rec_run.v  st_rtt_walk.v  st_s2_walk_result.v  st_smc_result.v
test/test_file/: test.v
testcase/: CheckFeatureSpec.v  CheckFeatureSpecMid.v  EL3IFCSpec.v  EL3IFCSpecMid.v  ExceptionHandlerSpec.v  ExceptionHandlerSpecMid.v  ExceptionOpsLow.v  ExceptionOpsSpec.v  ExceptionOpsSpecMid.v  FindGranuleSpec.v  FindGranuleSpecMid.v  FindGranuleSpec_debug.v  GetFeatureRegSpec.v  GetFeatureRegSpecMid.v  GranuleInfoLow.v  GranuleInfoSpec.v  GranuleInfoSpecMid.v  GranuleLockSpec.v  GranuleLockSpecMid.v  GranuleStateSpec.v  GranuleStateSpecMid.v  HelpersSpec.v  HelpersSpecDRF.v  HelpersSpecMid.v  InitRecSpec.v  InitRecSpecMid.v  InitRegsSpec.v  InitRegsSpecMid.v  InjectAbortSpec.v  InjectAbortSpecMid.v  InvalidatePagesSpec.v  InvalidatePagesSpecMid.v  LockGranulesSpec.v  LockGranulesSpecMid.v  MakeReturnCodeSpecMid.v  MemRWSpec.v  MemRWSpecMid.v  MmapInternalSpec.v  MmapInternalSpecMid.v  MmapSpec.v  (+81 more)
testcase/ProofDelegate/: GlobalDefs.v  _CoqProject
testcase/ProofDelegateNoLens/: Code.v  GlobalDefs.v
testcase/ProofGenBufferMap/: DataTypes.v  GlobalDefs.v  _CoqProject
testcase/ProofRTT/: .lia.cache  Code.v  DataTypes.v  GlobalDefs.v  SecurityProof.v  _CoqProject
(+3058 files in other folders)
